bin/test/fixtures/public/fail/semantic/extra/notBooleanCondition.jmm
import static io.println(int);

class NotBoolean {

	public int add(int a, int b) {
        if(a) {
            a = b;
        }
		return a;
	}
}